[menubar] fix collapse button

--- a/assets/default.css
+++ b/assets/default.css
@@ -77,7 +77,10 @@ pre.prettyprint li.L9 {
 
 a { outline: 0 none!important; }
 
-body > nav.navbar .navbar-brand.navbar-right > a {
+body > nav.navbar li.active > a {
+    box-shadow: 0 0 50px #ccc;
+    }
+body > nav.navbar .navbar-brand > a {
     text-decoration: none;
     }
 
